--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <div class="container">
     <h1>🍞 Zamów swój chleb</h1>
     <p>Wpisz poniżej swoje zamówienie, a my je przygotujemy i dowieziemy na rynek.</p>
-    <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+    <form action="https://formspree.io/f/xyzdeaqn" method="POST">
       <input type="text" name="name" placeholder="Twoje imię" required>
       <input type="text" name="phone" placeholder="Numer telefonu" required>
       <textarea name="order" rows="4" placeholder="Napisz jakie pieczywo chcesz" required></textarea>
