--- a/index.html
+++ b/index.html
@@ -89,11 +89,7 @@
   <div class="container menu">
     <h2>🥖 Nasze pieczywo</h2>
     <ul>
-      <li><span>Chleb wiejski</span> <span>6 zł</span></li>
-      <li><span>Chleb żytni</span> <span>7 zł</span></li>
-      <li><span>Chleb razowy</span> <span>7 zł</span></li>
-      <li><span>Bułki pszenne (4 szt.)</span> <span>3 zł</span></li>
-      <li><span>Chałka</span> <span>8 zł</span></li>
+      <li><span>Chleb żytni</span> <span>10 zł</span></li>
     </ul>
   </div>
 
@@ -111,9 +107,8 @@
 
   <div class="container">
     <h2>📞 Kontakt</h2>
-    <p>Telefon: <strong>123 456 789</strong></p>
-    <p>Email: <strong>kontakt@zamowchleb.com</strong></p>
-    <p>Miejsce odbioru: Rynek Główny</p>
+    <p>Telefon: <strong>722 175 141</strong></p>
+    <p>Email: <strong>domowapiekarniapiotra@gmail.com</strong></p>
   </div>
 
   <footer>
